--- a/Express/Base.lproj/Main.storyboard
+++ b/Express/Base.lproj/Main.storyboard
@@ -73,36 +73,36 @@
             </objects>
             <point key="canvasLocation" x="19.5" y="-240.5"/>
         </scene>
-        <!--物流详情-->
-        <scene sceneID="DaS-uV-gQe">
+        <!--Root View Controller-->
+        <scene sceneID="XfV-94-HrG">
             <objects>
-                <tableViewController id="Tod-0w-GEp" customClass="ExpressTracesViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="28" sectionFooterHeight="28" id="glM-Gl-S6Y">
+                <tableViewController id="zgv-pR-7JG" customClass="ExpressTracesViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="nc6-k7-R9G">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UITableViewCellTrace" rowHeight="70" id="1EU-vo-17r">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UITableViewCellTrace" rowHeight="70" id="8FQ-XA-uZp">
                                 <rect key="frame" x="0.0" y="92" width="375" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1EU-vo-17r" id="K6o-6i-683">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8FQ-XA-uZp" id="vgI-RA-lY2">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="69.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="10:10:43" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kKm-Lh-rHs">
-                                            <rect key="frame" x="8" y="7" width="90" height="25"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iib-v1-dWu">
+                                            <rect key="frame" x="8" y="8" width="101" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2016.10.09" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BtS-w5-uq9">
-                                            <rect key="frame" x="8" y="37" width="90" height="25"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2I1-HD-TUD">
+                                            <rect key="frame" x="8" y="37" width="101" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" tag="102" contentMode="scaleToFill" fixedFrame="YES" text="我新欢你今天是个好日子为什么这么的奠基人底下那个药我是" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Siv-ey-eCw">
-                                            <rect key="frame" x="112" y="7" width="255" height="55"/>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" tag="102" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="pJ8-I7-Wop">
+                                            <rect key="frame" x="117" y="8" width="250" height="50"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -112,36 +112,35 @@
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="Tod-0w-GEp" id="qtC-oM-agc"/>
-                            <outlet property="delegate" destination="Tod-0w-GEp" id="cJr-oK-yI5"/>
+                            <outlet property="dataSource" destination="zgv-pR-7JG" id="bpU-lD-jC9"/>
+                            <outlet property="delegate" destination="zgv-pR-7JG" id="6Ay-dG-vvH"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="物流详情" id="2Ro-Vg-9X7"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="ZVe-tw-jI2"/>
                     <connections>
-                        <outlet property="tableView" destination="glM-Gl-S6Y" id="axq-d1-gfo"/>
+                        <outlet property="tableView" destination="nc6-k7-R9G" id="R7Z-iA-NR2"/>
                     </connections>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7Rc-dv-oj1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Szs-XY-7ZZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1006.5" y="-260.5"/>
+            <point key="canvasLocation" x="1687.5" y="-336.5"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="fhW-Z1-6o0">
+        <scene sceneID="CkQ-5K-IgG">
             <objects>
-                <navigationController id="TKO-hY-jZ2" sceneMemberID="viewController">
+                <navigationController id="W28-43-JI3" sceneMemberID="viewController">
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="iv8-bJ-1NP">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0ZQ-Zs-xUm">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="Tod-0w-GEp" kind="relationship" relationship="rootViewController" id="PXk-Nt-bec"/>
+                        <segue destination="zgv-pR-7JG" kind="relationship" relationship="rootViewController" id="zdb-PE-ydA"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Rwm-PS-Luu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="R6t-ya-3W4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="545.5" y="-260.5"/>
+            <point key="canvasLocation" x="883.5" y="-219.5"/>
         </scene>
         <!--快递历史-->
         <scene sceneID="5fG-dV-xdg">
