--- a/Express/Base.lproj/Main.storyboard
+++ b/Express/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="tHd-Xe-Rba">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -65,7 +65,11 @@
                     </view>
                     <tabBarItem key="tabBarItem" id="acW-dT-cKf"/>
                     <navigationItem key="navigationItem" title="快递查询" id="fse-Tf-j8T">
-                        <barButtonItem key="rightBarButtonItem" image="qrcode_tabbar_icon_qrcode" id="AjQ-1d-4Zr" userLabel="二维码"/>
+                        <barButtonItem key="rightBarButtonItem" image="qrcode_tabbar_icon_qrcode" id="AjQ-1d-4Zr" userLabel="二维码">
+                            <connections>
+                                <action selector="QRCodeButtonClick:" destination="9pv-A4-QxB" id="Z7l-En-Byd"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
